--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,3 +1,5 @@
+include ../components/reuse
+
 doctype html
 html(lang="en")
     head
@@ -6,10 +8,39 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{title}
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD' crossorigin='anonymous')
+        link(rel="stylesheet", href="/css/main.css")
     body 
-        block content
+        .wrapper
+           .row
+               nav.col-2.col-md-1
+                  a.blue(href="/")
+                      i.fa-brands.fa-twitter
+                  a(href="/")
+                      i.fa-sharp.fa-solid.fa-house-chimney
+                  a(href="/")
+                     i.fa-solid.fa-magnifying-glass
+                  a(href="/")
+                     i.fa-solid.fa-bell
+                  a(href="/")
+                     i.fa-solid.fa-envelope-open
+                  a(href="/")
+                     i.fa-solid.fa-user
+                  a(href="/logout")
+                     i.fa-solid.fa-right-from-bracket  
+
+               .mainSectionContainer.col-10.col-md-9
+                     .titleContainer
+                          h1  Home 
+                     block content
+
+               .d-none.d-md-block.col-2
+                  span  trokjfvnis
+              
+
+       
 
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js' integrity='sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN' crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.6.3.min.js' integrity='sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=' crossorigin='anonymous')
-   
+        script(src='https://kit.fontawesome.com/413ddf1d66.js' crossorigin='anonymous')
+        script(src="/Functions/common.js") 
         
