--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -12,7 +12,7 @@ html(lang="en")
     body 
         .wrapper
            .row
-               nav.col-2.col-md-1
+               nav.col-2.col-md-2
                   a.blue(href="/")
                       i.fa-brands.fa-twitter
                   a(href="/")
@@ -28,7 +28,7 @@ html(lang="en")
                   a(href="/logout")
                      i.fa-solid.fa-right-from-bracket  
 
-               .mainSectionContainer.col-10.col-md-9
+               .mainSectionContainer.col-10.col-md-8
                      .titleContainer
                           h1  Home 
                      block content
@@ -42,5 +42,7 @@ html(lang="en")
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js' integrity='sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN' crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.6.3.min.js' integrity='sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=' crossorigin='anonymous')
         script(src='https://kit.fontawesome.com/413ddf1d66.js' crossorigin='anonymous')
-        script(src="/Functions/common.js") 
         
+        block script 
+        
+        script(src="/Functions/common.js")
