--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,9 @@
 extends layouts/main-layout.pug
 
 block content     
-  +createpostForm()
+  +createpostForm(userName)
   .postContainer
+  +createReplyModal(userName)
 
 block script 
       script(src="/Functions/home.js") 
