--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -36,7 +36,7 @@ html(lang="en")
                      block content
 
                .d-none.d-md-block.col-2
-                  span  trokjfvnis
+                  span 
               
 
        
