--- a/public/css/main.css
+++ b/public/css/main.css
@@ -206,3 +206,11 @@ button{
     padding: 0;
     padding-top: 15px;
 }
+
+
+.modal .post{
+ padding: 0 0 15px 0;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+}
