--- a/public/css/main.css
+++ b/public/css/main.css
@@ -239,3 +239,14 @@ button{
 .post.largeFont .postFooter {
       font-size: 23px;
 }
+
+.postContentContainer .header {
+    display: flex
+}
+ .postContentContainer .header .date {
+    flex :1
+}
+
+.deleteButton{
+    background-color: white;
+}
