--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ extends layouts/main-layout.pug
 block content     
   +createpostForm(userName)
   .postContainer
-  +createReplyModal(userName)
+  +createPostModals(userName)
 
 block script 
       script(src="/Functions/home.js") 
