--- a/views/postPage.pug
+++ b/views/postPage.pug
@@ -5,7 +5,8 @@ block content
     var postId = "!{postId}"       
   .postContainer
 
-  +createReplyModal(userName)
+  +createPostModals(userName)
+
 
 block script 
       script(src="/Functions/postPage.js") 
