--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -32,7 +32,7 @@ html(lang="en")
 
                .mainSectionContainer.col-10.col-md-8
                      .titleContainer
-                          h1  Home 
+                          h1  #{title} 
                      block content
 
                .d-none.d-md-block.col-2
