--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 :root{
     --blue : #1FA2F1;
-    --lightGrey:  rgb(230, 237, 241)
+    --lightGrey:  rgb(230, 237, 241);
+    --blueBackGround :rgba(212 ,237, 255, 0.6);
 }
 
 a{
@@ -249,4 +250,49 @@ button{
 
 .deleteButton{
     background-color: white;
+}
+
+.errorMessage {
+    padding: 15px;
+}
+
+.profileHeaderContainer .coverPhotoContainer{
+    height: 180px;
+    background-color: var(--blue);
+    position: relative;
+}
+
+.profileHeaderContainer .userImageContainer {
+    height:  132px;
+    width: 132px;
+    margin-left: 15px;
+    position: absolute;
+    bottom:-66px;
+
+}
+
+.profileHeaderContainer .userImageContainer  img{
+    border: 4px solid #fff;
+}
+
+.profileHeaderContainer .profileButtonContainer {
+    text-align: right;
+    padding: 15px;
+    min-width: 66px;
+}
+
+.profileButton,
+.followButton,
+.follow{
+    border: 1px solid var(--blue);
+    color: var(--blue);
+    padding: 5px 15px;
+    border-radius: 60px;
+    display: inline-block;
+    margin-left: 15px;
+}
+
+.profileButton:hover,
+.followButton:hover{
+    background-color: var(--blueBackGround);
 }
