--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -13,7 +13,20 @@ block content
             if profileUser._id !== userName._id
                   a.profileButton(href = `/message/${profileUser._id}`)
                      i.fas.fa-envelope
-                  +createFollowButton(profileUser, true)             
+                  +createFollowButton(profileUser, true) 
+         .userDetailsContainer
+            span.diplayName #{profileUser.firstName} #{profileUser.lastName}  
+            span.userName @#{profileUser.userName}
+
+            .followersContainer
+               a(href=`/profile/${profileUser.userName}/following`)
+                    span.value #{0}
+                    span following
+               a(href=`/profile/${profileUser.userName}/followers`)
+                    span.value #{0}
+                    span Followers            
+
+
   .postContainer
   +createPostModals(userName)
 
