--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -25,7 +25,7 @@ html(lang="en")
                      i.fa-solid.fa-bell
                   a(href="/")
                      i.fa-solid.fa-envelope-open
-                  a(href="/profile")
+                  a(href=`/profile/${userName.userName}`)
                      i.fa-solid.fa-user
                   a(href="/logout")
                      i.fa-solid.fa-right-from-bracket  
