--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -3,7 +3,12 @@ extends layouts/main-layout.pug
 block content 
   if !profileUser
        span.errorMessage User not found
-  else     
+  else 
+      script. 
+            let profileUserId = '!{profileUser._id}' 
+            let selectedTab = '!{selectedTab}'    
+
+            
       .profileHeaderContainer 
          .coverPhotoContainer
 
@@ -13,7 +18,7 @@ block content
             if profileUser._id !== userName._id
                   a.profileButton(href = `/message/${profileUser._id}`)
                      i.fas.fa-envelope
-                  +createFollowButton(profileUser, true) 
+                  +createFollowButton(profileUser, false) 
          .userDetailsContainer
             span.diplayName #{profileUser.firstName} #{profileUser.lastName}  
             span.userName @#{profileUser.userName}
@@ -25,10 +30,14 @@ block content
                a(href=`/profile/${profileUser.userName}/followers`)
                     span.value #{0}
                     span Followers            
+      .tabConatiner 
+         +createTab("Post", `/profile/${profileUser.userName}`, selectedTab !== "replies")
+         +createTab("Replies", `/profile/${profileUser.userName}/replies`, selectedTab == "replies")
+         
 
 
   .postContainer
   +createPostModals(userName)
 
 block script 
-      //- script(src="/Functions/profile.js") 
+      script(src="/Functions/profile.js") 
