--- a/views/components/reuse.pug
+++ b/views/components/reuse.pug
@@ -46,7 +46,7 @@ mixin createPostModals(userName)
 
 mixin createFollowButton(user, isFollowing)
          - text = isFollowing ? "Following" : "Follow"
-         - buttonClass = isFollowing? "followButton following" : "follow"
+         - buttonClass = isFollowing? "followButton following" : "followButton"
          button(class = buttonClass, data-user = user._id) #{text}
 
 mixin createTab(name , href ,isSelected)
