--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -8,7 +8,9 @@ block content
             let profileUserId = '!{profileUser._id}' 
             let selectedTab = '!{selectedTab}'    
 
-            
+      -followerCount = profileUser.followers.length 
+      -followingCount = profileUser.following.length 
+      
       .profileHeaderContainer 
          .coverPhotoContainer
 
@@ -18,17 +20,22 @@ block content
             if profileUser._id !== userName._id
                   a.profileButton(href = `/message/${profileUser._id}`)
                      i.fas.fa-envelope
-                  +createFollowButton(profileUser, false) 
+            - let profileUserId = profileUser._id.toString();
+            - if (userName.following &&  userName.following.includes(profileUserId))
+               +createFollowButton(profileUser, true)
+            - else 
+               +createFollowButton(profileUser, false)
+                 
          .userDetailsContainer
             span.diplayName #{profileUser.firstName} #{profileUser.lastName}  
             span.userName @#{profileUser.userName}
 
             .followersContainer
                a(href=`/profile/${profileUser.userName}/following`)
-                    span.value #{0}
+                    span.value #{followingCount}
                     span following
                a(href=`/profile/${profileUser.userName}/followers`)
-                    span.value #{0}
+                    span#followerValue.value #{followerCount}
                     span Followers            
       .tabConatiner 
          +createTab("Post", `/profile/${profileUser.userName}`, selectedTab !== "replies")
