--- a/views/components/reuse.pug
+++ b/views/components/reuse.pug
@@ -46,11 +46,27 @@ mixin createPostModals(userName)
 
 mixin createFollowButton(user, isFollowing)
          - text = isFollowing ? "Following" : "Follow"
-         - buttonClass = isFollowing? "followButton following" : "follow"
+         - buttonClass = isFollowing? "followButton following" : "followButton"
          button(class = buttonClass, data-user = user._id) #{text}
 
 mixin createTab(name , href ,isSelected)
           -clasName = isSelected ?"tab active" : "tab"
           a(href = href, class= clasName)
              span #{name}
+
+mixin createImageUploadModal()
+     .modal.fade#imageUploadModal(tabindex='-1',role='dialog', aria-labelledby='imageUploadModalLabel', aria-hidden='false')
+        .modal-dialog(role='document')
+            .modal-content
+               .modal-header
+                  h5#imageUploadModalLabel.modal-title Upload a new profile picture.
+                  button.close(type='button', data-dismiss='modal', aria-label='Close')
+                     span(aria-hidden='false') &times;
+               .modal-body
+                 input#filePhoto(type="file", name="filePhoto")
+                 .imagePreviewContainer
+                  img#imagePreview(src="", alt="") 
+               .modal-footer
+                  button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
+                  button#imageUploadButton.btn.btn-primary(type='button') Save             
                
