--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,34 +39,33 @@ nav a {
   flex-direction: column;
 }
 
-
-nav a.blue{
-    color:  var(--blue);
+nav a.blue {
+  color: var(--blue);
 }
 
-nav a:hover{
-     background-color: #d4eddf;
-     border-radius: 30%;
-     color: var(--blue);
+nav a:hover {
+  background-color: #d4eddf;
+  border-radius: 30%;
+  color: var(--blue);
 }
 
-.wrapper > .row{
-    margin: 0
+.wrapper > .row {
+  margin: 0;
 }
 
-a:hover{
-    background-color: #d4eddf;
-    border-radius: 30%;
-    color: var(--blue);
+a:hover {
+  background-color: #d4eddf;
+  border-radius: 30%;
+  color: var(--blue);
 }
 
-.titleContainer{
-    height: 53px;
-    padding: 0px 15px;
-    display: flex;
-    align-items: center; 
-    border-bottom: 1px solid var(--lightGrey);
-    flex-shrink: 0;
+.titleContainer {
+  height: 53px;
+  padding: 0px 15px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--lightGrey);
+  flex-shrink: 0;
 }
 
 a:hover {
@@ -271,7 +270,7 @@ button {
   padding: 15px;
 }
 
-.profileHeaderContainer .coverPhotoContainer {
+.profileHeaderContainer .coverPhotoSection {
   height: 180px;
   background-color: var(--blue);
   position: relative;
@@ -396,7 +395,7 @@ button {
   padding: 0 15px;
 }
 
-.profilePictureButton {
+.profilePictureButton, .coverPhotoButton {
   position: absolute;
   font-size: 50px;
   color: rgba(0, 0, 0, 0.6);
@@ -404,12 +403,29 @@ button {
   display: none;
 }
 
-.userImageContainer:hover .profilePictureButton {
+.coverPhotoContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+} 
+
+.userImageContainer:hover
+  .profilePictureButton,
+  .coverPhotoContainer:hover
+  .coverPhotoButton {
   display: block;
 }
 
-#imagePreview {
+.coverPhotoContainer img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#imagePreview,#coverPreview {
   width: 100%;
   display: block;
   max-width: 100%;
 }
+
