pin-unpinn post

--- a/views/components/reuse.pug
+++ b/views/components/reuse.pug
@@ -43,6 +43,8 @@ mixin createDeletePostModal()
 mixin createPostModals(userName)
      +createReplyModal(userName)
      +createDeletePostModal()
+     +createPinnedPostModal()
+     +createUnPinPostModal()
 
 mixin createFollowButton(user, isFollowing)
          - text = isFollowing ? "Following" : "Follow"
@@ -85,3 +87,32 @@ mixin createCoverPhotoUploadModal()
                .modal-footer
                   button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
                   button#coverPhotoButton.btn.btn-primary(type='button') Save               
+
+mixin createPinnedPostModal()
+     .modal.fade#confirmPinModal(tabindex='-1',role='dialog', aria-labelledby='confirmPinModalLabel', aria-hidden='false')
+        .modal-dialog(role='document')
+            .modal-content
+               .modal-header
+                  h5#confirmPinModalLabel.modal-title Pin this post?
+                  button.close(type='button', data-dismiss='modal', aria-label='Close')
+                     span(aria-hidden='false') &times;
+               .modal-body
+                 p This post will appear at the top of you profile. You can only
+               .modal-footer
+                  button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
+                  button#pinPostButton.btn.btn-primary(type='button') Pin
+
+mixin createUnPinPostModal()
+     .modal.fade#unPinModal(tabindex='-1',role='dialog', aria-labelledby='unPinModalLabel', aria-hidden='false')
+        .modal-dialog(role='document')
+            .modal-content
+               .modal-header
+                  h5#unPinModalLabel.modal-title Unpin this post?
+                  button.close(type='button', data-dismiss='modal', aria-label='Close')
+                     span(aria-hidden='false') &times;
+               .modal-body
+                 p This post will be unpinned.
+               .modal-footer
+                  button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
+                  button#unPinPostButton.btn.btn-primary(type='button') Pin                      
+                                               
