--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -52,7 +52,7 @@ block content
          +createTab("Replies", `/profile/${profileUser.userName}/replies`, selectedTab == "replies")
 
 
-
+   .pinnedPostContained 
    .postContainer
    +createPostModals(userName)
    +createImageUploadModal()
