--- a/public/css/main.css
+++ b/public/css/main.css
@@ -395,7 +395,8 @@ button {
   padding: 0 15px;
 }
 
-.profilePictureButton, .coverPhotoButton {
+.profilePictureButton,
+.coverPhotoButton {
   position: absolute;
   font-size: 50px;
   color: rgba(0, 0, 0, 0.6);
@@ -403,29 +404,43 @@ button {
   display: none;
 }
 
-.coverPhotoContainer{
+.coverPhotoContainer {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
-} 
+}
 
-.userImageContainer:hover
-  .profilePictureButton,
-  .coverPhotoContainer:hover
-  .coverPhotoButton {
+.userImageContainer:hover .profilePictureButton,
+.coverPhotoContainer:hover .coverPhotoButton {
   display: block;
 }
 
-.coverPhotoContainer img{
+.coverPhotoContainer img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-#imagePreview,#coverPreview {
+#imagePreview,
+#coverPreview {
   width: 100%;
   display: block;
   max-width: 100%;
 }
 
+.pinButton {
+  background: none;
+}
+.pinButton.active {
+  color: var(--blue);
+}
+
+.pinnedPostText {
+  font-size: 12px;
+  color: rgb(101, 119, 134);
+}
+
+.pinnedPostContained {
+  border-bottom: 10px solid rgb(230, 236, 240);
+}
